# spicy-group-games

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_server.py
.github/workflows/: integration-tests.yml  tests.yml
src/: app.py  callbacks.py  layouts.py  lobby_store.py  models.py
src/spicy_group_games/: __init__.py  app.py  callbacks.py  lobby_store.py
tests/: conftest.py  test_callbacks_helpers.py  test_lobby_integration.py  test_lobby_store.py
